Fixed 'wrapping' issue with Register and Add to calendar buttons on 'event' cards. Added a media query to set a { display: block; } between 990px and 1200px.

--- a/scss/components/cards/_events.scss
+++ b/scss/components/cards/_events.scss
@@ -80,7 +80,7 @@
 	.register {
 
 		a {
-			display: block;
+			display: inline;
 		}	
 	}
 }
